syntax = "proto3";
package stats.message.event;

option java_multiple_files = true;
option java_package = "ru.practicum.ewm.grpc.stats.event";

import "google/protobuf/timestamp.proto";

message UserActionProto {
  int64 user_id = 1;
  int64 event_id = 2;
  ActionTypeProto action_type = 3;
  google.protobuf.Timestamp timestamp = 4;
}

enum ActionTypeProto {
  ACTION_VIEW = 0;
  ACTION_REGISTER = 1;
  ACTION_LIKE = 2;
}